fix: improve dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -72,14 +72,6 @@ input[type="number"] {
   }
 }
 
-input {
-  @apply bg-slate-100 dark:bg-slate-800 text-gray-900 dark:text-gray-100 placeholder-gray-400 dark:placeholder-gray-500;
-}
-
-.ant-input-group-addon {
-  @apply text-gray-900 dark:text-gray-100;
-}
-
 .ant-switch-inner {
   @apply bg-gray-600;
 }
@@ -101,11 +93,19 @@ input {
 }
 
 .ant-modal-title {
-  @apply bg-gray-100 dark:bg-slate-900 text-gray-900 dark:text-gray-100;
+  @apply dark:bg-gray-200
 }
 
 .ant-modal-content {
-  @apply bg-gray-100 dark:bg-slate-900 text-gray-900 dark:text-gray-100;
+  @apply dark:bg-gray-200
+}
+
+.ant-table-tbody {
+  @apply dark:bg-slate-800 dark:text-gray-100;
+}
+
+.ant-table-row:hover {
+  @apply dark:text-black;
 }
 
 .no-border {
